deployment.yaml
#Autoscale
apiVersion: apps/v1
kind: Deployment
metadata:
    name: landingpage
    labels:
      app: landingpage
spec:
  selector:
    matchLabels:
      app: landingpage
  template:
    metadata:
      name: landingpage
      namespace: landingpage
      labels:
        app: landingpage
    spec:
      containers:
        - name: landingpage
          image: harjay88/landingpage:latest
          resources:
            requests:
              cpu: "50m"
              memory: "50M"
---
#Service
apiVersion: v1
kind: Service
metadata:
  name: landingpage
  namespace: landingpage
spec:
  selector:
    app: landingpage
  type: NodePort
  ports:
    - name: http
      port: 80
      nodePort: 30080
