aws-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landingpage
  namespace : landingpage
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: landing.teamtss.xyz #host route53
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landingpage
                port:
                  number: 80
